<resources>
    <string name="app_name">Honours Project Health App</string>

    <!-- Home Fragment -->
    <string name="tvIntroductionLabel">Welcome To Your New Home For Food Allergy Information!</string>
    <string name="tvNavigationLabel">Please select an icon from the bottom of the screen to navigate around the application</string>
    <string name="ivMeal1">Image of Meal 1</string>
    <string name="ivMeal2">Image of Meal 2</string>


    <!-- Bottom Navigation -->
    <string name="miBottomNavHome">Home</string>
    <string name="miBottomNavSearch">Search</string>
    <string name="miBottomNavUserList">User List</string>


    <!-- About Fragment -->
    <string name="tvAppCollectInfoLabel">How does the app collect its data?</string>
    <string name="tvAppCollectInfoAnswerLabel">By connecting to the ‘Open Food Facts’ dataset, all the relevant information is sent to the application.</string>
    <string name="tvNutritScoreLabel">What is the “Nutrition Score”?</string>
    <string name="tvNutritScoreAnswerLabel">The Nutrition Score (or Nutri-Score) is a quick and easy method of checking and comparing the nutritional quality of the products, ranging from a healthy A to a unhealthy E. </string>
    <string name="tvNovaScoreLabel">What is the “NOVA Score”?</string>
    <string name="tvNovaScoreAnswer1Label">the NOVA Score of products is used to inform users on how much the food was processed before it was released to the store. </string>
    <string name="tvNovaScoreAnswer2Label">The score ranges from a minimally processed score of 1, to a highly processed score of 4</string>


    <!-- Food Selection Fragment -->
    <string name="tvSearchQuestionLabel">Search Food Items</string>
    <string name="tvOrLabel">OR,</string>
    <string name="tvSearchBarcodeScannerLabel">You Can Search Food Items Using A Barcode Scanner</string>
    <string name="etEnterFoodItem">Enter Food Item...</string>
    <string name="btnGoToBarcodeScanner">Go To Barcode Scanner</string>
    <string name="btnGoToFoodList">Search</string>


    <!-- Food Info Fragment -->
    <string name="btnGoToAbout">Unsure What Something Means? Tap Here!</string>
    <string name="tvFoodInfoNameLabel">Name:</string>
    <string name="tvFoodInfoAllergensLabel">Allergens From Ingredients:</string>
    <string name="tvFoodInfoVeganLabel">Vegan?:</string>
    <string name="tvFoodInfoIngredientsAnalysisLabel">Ingredients Analysis:</string>
    <string name="tvFoodInfoVegetarianLabel">Vegetarian?:</string>
    <string name="tvFoodInfoNUTRIScoreLabel">Nutrition Score:</string>
    <string name="tvFoodInfoNOVAScoreLabel">NOVA Score:</string>
    <string name="ivFoodInfoImage">Placeholder Image of Food Item On Food Info Page</string>
    <string name="tvFoodInfoName">%1$s</string>
    <string name="tvFoodInfoAllergens">%1$s</string>
    <string name="tvFoodInfoVegan">%1$s</string>
    <string name="tvFoodInfoVegetarian">%1$s</string>
    <string name="tvFoodInfoNUTRIScore">%1$s</string>
    <string name="tvFoodInfoNOVAScore">%1$s</string>
    <string name="tvIngredientsAnalysis">%1$s</string>


    <!-- Food List Fragment -->
    <string name="etEnterFoodItem2">Home</string>
    <string name="btnGoToFoodList2">Search</string>
    <string name="rv_foodList">User List</string>

    <!-- User Food List Item Fragment -->
    <string name="tvUserFoodListNameLabel"></string>
    <string name="tvUserFoodListVeganLabel"></string>
    <string name="ivUserFoodListImage"></string>
    <string name="tvUserFoodListVegetarianLabel"></string>
    <string name="tvUserFoodListNUTRIScoreLabel"></string>
    <string name="tvUserFoodListNOVAScoreLabel"></string>
    <string name="tvUserFoodListAllergensLabel"></string>
    <string name="tvUserFoodListIngredientsAnalysis"></string>



    <!-- User Food List Fragment -->
    <string name="tvUserFoodListTitleLabel">User Selected Food Items</string>
    <string name="btnClearItems">Clear Items</string>
    <string name="btnAddToUserList">Add To User List</string>


    <!-- Barcode Scanner Fragment -->
    <string name="tvScanFoodItemLabel">Scan Food Items</string>
    <string name="tvScanFoodItemTestLabel">Scan Food Itemsssssssss</string>
    <string name="tvScanBarcodeInfoLabel">Scan a barcode to be instantly sent to that products Info Page</string>
    <string name="btnScan">Scan</string>
    <string name="btnReverseCam">Reverse Camera</string>
    <string name="btnCancelCam">Cancel</string>
    <string name="ivRoundRectangleScanner">rounded rectangle on Barcode Scanner Page</string>
    <string name="ivBlackRectangleScanner">black rectangle on Barcode Scanner Page</string>
    <string name="ivCameraScanner">Reverse Camera Icon</string>
    <string name="ivCancelScanner">Cancel Scanner Icon</string>
    <string name="ivScanScanner">Scan Icon</string>
    <string name="tvBarcodeText">Barcode Text</string>
    <string name="btnCamera">Camera</string>
    <string name="btnGallery">Gallery</string>
    <string name="btnBarcodeAddToUserList">Go To User List</string>





    <!-- Error Message For API -->
    <string name="error_downloading_food_information">Error Getting Food Item Information From the Food Item API</string>

    <!-- Placeholder Text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>