<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0CB">

    <TextView
        android:id="@+id/tvUserFoodListNameLabel"
        android:layout_width="216dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvUserFoodListNameLabel"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Coca-Cola Zero 330ml" />

    <ImageView
        android:id="@+id/ivUserFoodListImage"
        android:layout_width="168dp"
        android:layout_height="181dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/ivUserFoodListImage"
        android:src="@drawable/food_item_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserFoodListNUTRIScoreLabel"
        android:layout_width="67dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tvUserFoodListNUTRIScoreLabel"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFoodListIngredientsAnalysisLabel"
        tools:text="b" />

    <TextView
        android:id="@+id/tvUserFoodListNOVAScoreLabel"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tvUserFoodListNOVAScoreLabel"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFoodListNUTRIScoreLabel"
        tools:text="4" />

    <TextView
        android:id="@+id/tvUserFoodListAllergensLabel"
        android:layout_width="209dp"
        android:layout_height="103dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvUserFoodListAllergensLabel"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFoodListNameLabel"
        tools:text="carbonated water, colour (caramel e150d), acid (phosphoric acid), sweeteners (aspartame, acesulfame k), natural flavourings (including caffeine), acidity regulator (sodium citrates) contains a source of phenylalanine" />

    <TextView
        android:id="@+id/tvUserFoodListIngredientsAnalysisLabel"
        android:layout_width="194dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tvUserFoodListIngredientsAnalysis"
        android:textColor="#000000"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFoodListAllergensLabel"
        tools:text="[en:gluten_free, en: maybe_vegan, en: maybe_vegetarian ]" />
</androidx.constraintlayout.widget.ConstraintLayout>