<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0CB"
    tools:context=".BarcodeScannerFragment" >

    <ImageView
        android:id="@+id/ivRoundedRectangleScanner"
        android:layout_width="405dp"
        android:layout_height="582dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:contentDescription="@string/ivRoundRectangleScanner"
        android:src="@drawable/big_rounded_vertical_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera2"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/btnGallery2"
        android:layout_width="167dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btnGallery"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScanFoodItemLabel"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCamera2"
        android:layout_width="167dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnCamera"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScanFoodItemLabel"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnScan"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivScannerImage2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/ivScannerImage2"
        android:layout_width="356dp"
        android:layout_height="395dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivRoundedRectangleScanner"
        app:srcCompat="@drawable/big_rounded_border_rectangle" />

    <Button
        android:id="@+id/btnCancelScan"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:text="@string/btnCancelCam"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivScannerImage2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvScanFoodItemLabel"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:background="@drawable/big_rounded_rectangle"
        android:gravity="center"
        android:text="@string/tvScanFoodItemLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>