<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivMeal1"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-67dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/ivMeal1"
        app:srcCompat="@drawable/meal" />

    <ImageView
        android:id="@+id/ivMeal2"
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="75dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ivMeal2"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/meal2" />

    <TextView
        android:id="@+id/tvIntroductionLabel"
        android:layout_width="259dp"
        android:layout_height="138dp"
        android:layout_alignStart="@id/ivMeal1"
        android:layout_alignTop="@id/ivMeal1"
        android:layout_alignEnd="@id/ivMeal1"
        android:layout_alignBottom="@id/ivMeal1"
        android:layout_marginStart="46dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="137dp"
        android:background="@drawable/big_rounded_rectangle"
        android:gravity="center"
        android:text="@string/tvIntroductionLabel"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNavigationLabel"
        android:layout_width="322dp"
        android:layout_height="119dp"
        android:layout_alignStart="@id/ivMeal2"
        android:layout_alignTop="@id/ivMeal2"
        android:layout_alignEnd="@id/ivMeal2"
        android:layout_alignBottom="@id/ivMeal2"
        android:layout_marginStart="19dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="121dp"
        android:background="@drawable/big_rounded_rectangle"
        android:gravity="center"
        android:text="@string/tvNavigationLabel"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>