<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0CB"
    tools:context=".FoodSelectionFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvSearchQuestionLabel"
        android:layout_width="388dp"
        android:layout_height="174dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/tvSearchQuestionLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSearchBarcodeScannerLabel"
        android:layout_width="345dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/tvSearchBarcodeScannerLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrLabel" />

    <TextView
        android:id="@+id/tvOrLabel"
        android:layout_width="99dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/yellow_border"
        android:gravity="center"
        android:text="@string/tvOrLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterFoodItem"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etEnterFoodItem"
        android:layout_width="389dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/green_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/etEnterFoodItem"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchQuestionLabel" />

    <Button
        android:id="@+id/btnGoToBarcodeScanner"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btnGoToBarcodeScanner"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchBarcodeScannerLabel"
        app:layout_constraintVertical_bias="0.121" />

</androidx.constraintlayout.widget.ConstraintLayout>